# Non-Realtime-Audio-Processing

./: README.md
host/: CMakeLists.txt
host/include/: Dynamic_Library.hpp  audio.hpp  plugin.hpp
host/src/: Dynamic_Library.cpp  audio.cpp  main.cpp  plugin.cpp
include/: api.h
plugins/: CMakeLists.txt
plugins/Freq Shifter/: CMakeLists.txt  freq_shifter.cpp  plugin.info.in
plugins/Monoifier/: CMakeLists.txt  monoifier.cpp  plugin.info.in
plugins/Normalise/: CMakeLists.txt  normalise.cpp  plugin.info.in
plugins/common/fft/: CMakeLists.txt  fft.cpp  fft.hpp
